# diffmahnet

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: test_package.yml
diffmahnet/: __init__.py  datatools.py  diffmahnet.py
diffmahnet/tests/: test_diffmahflow.py
docs/: environment.yaml
docs/source/: conf.py  index.rst  installation.rst  reference.rst
docs/source/notebooks/: intro.ipynb  load_pretrained.ipynb
scripts/: flowjax_train.py  kdescent_train.py  validation_plots.py
