[project]
name = "diffmahnet"
authors = [
    {name = "Alan Pearl", email = "alanpearl13@gmail.com"}
]
description = "Emulating DiffMah through normalizing flows"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "setuptools_scm.get_version"}

[project.urls]
home = "https://github.com/AlanPearl/diffmahnet"

[tool.setuptools_scm]
version_file = "diffmahnet/_version.py"
version_file_template = "__version__ = '{version}'"

[tool.setuptools]
include-package-data = true
packages = {find = {exclude=["tests*", "scripts*", "docs*", "notebooks*"]}}
package-dir = {diffmahnet = "diffmahnet"}

[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"
